# battle-factory

./: .clang-format  .gitignore  CMakeLists.txt  makefile
docs/: README.md  WORKFLOW.md
docs/mechanics/: damage.md  states.md  turns.md
docs/moves/: _TEMPLATE.md  agility.md  amnesia.md  baton-pass.md  double-edge.md  ember.md  fake-tears.md  fly.md  fury-attack.md  giga-drain.md  growl.md  iron-defense.md  protect.md  solar-beam.md  string-shot.md  substitute.md  swords-dance.md  tackle.md  tail-glow.md  tail-whip.md  thunder-wave.md
source/battle/: context.hpp  engine.cpp  engine.hpp  random.hpp
source/battle/commands/: accuracy.hpp  damage.hpp  drain.hpp  faint.hpp  stat_modify.hpp  status.hpp
source/battle/effects/: basic.hpp
source/battle/state/: pokemon.hpp
source/domain/: move.hpp  species.hpp  stats.hpp  status.hpp
src/: main.cpp
src/battle/: context.hpp  engine.cpp  engine.hpp  random.cpp  random.hpp
src/battle/commands/: abilities.hpp  accuracy.hpp  damage.hpp  faint.hpp  hazards.hpp  recoil.hpp  stat_modify.hpp  status.hpp  type_effectiveness.hpp  weather.hpp
src/battle/effects/: basic.hpp
src/battle/state/: field.hpp  pokemon.hpp  side.hpp
src/domain/: ability.hpp  move.hpp  species.hpp  weather.hpp
test/: framework.hpp  main.cpp  test_effect_attack_down.cpp  test_effect_attack_up_2.cpp  test_effect_burn_hit.cpp  test_effect_defense_down.cpp  test_effect_defense_up_2.cpp  test_effect_drain_hit.cpp  test_effect_hit.cpp  test_effect_paralyze.cpp  test_effect_recoil_hit.cpp  test_effect_speed_down.cpp  test_effect_speed_up_2.cpp
test/EZ80/: README.md  framework.cpp  framework.hpp
test/EZ80/archived/: README.md
test/host/: test_common.hpp
test/host/abilities/: test_intimidate.cpp
test/host/damage/: test_basic_damage.cpp
test/host/effects/: test_burn.cpp  test_hp_effects.cpp  test_leech_seed.cpp  test_multi_hit.cpp  test_protection.cpp  test_stat_modification.cpp  test_two_turn_moves.cpp  test_volatile_state.cpp
test/host/hazards/: test_stealth_rock.cpp
test/host/helpers/: battle_helpers.cpp  battle_helpers.hpp  pokemon_factory.cpp  pokemon_factory.hpp
test/host/mechanics/: test_priority.cpp
test/host/status/: test_burn_damage.cpp  test_paralysis.cpp
test/host/weather/: test_sandstorm.cpp
test/integration/: test_basic_turn_execution.cpp  test_engine_phase1.cpp
test/unit/: test_helpers.hpp
test/unit/effects/: test_attack_down.cpp  test_fly.cpp  (+18 more)
(+25 files in other folders)
